bluez (5.54-1) unstable; urgency=medium

  * Update to 5.54. (Closes: #946711, #966564, #925369)
  * Update d/libbluetooth3.symbols.
  * Delete unnecessary patches.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sun, 30 Aug 2020 06:48:15 +0900

bluez (5.52-1) experimental; urgency=medium

  * Update to 5.52.
  * Add bluez-source package.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 13 Nov 2019 13:26:08 +0900

bluez (5.51-1) experimental; urgency=medium

  * Update to 5.51.
  * Fix lintian warnings:
    - skip-systemd-native-flag-missing-pre-depends.
    - executable-not-elf-or-script.
    - maintainer-script-should-not-use-dpkg-maintscript-helper
      Use new dh_installdeb maintscript.
  * dh_installsystemd instread of dh_systemd_enable and start.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Mon, 07 Oct 2019 20:10:25 +0900

bluez (5.50-1.2) unstable; urgency=medium

  * Non-maintainer upload.
  * input: hog: Attempt to set security level if not bonded
  * input: Add LEAutoSecurity setting to input.conf

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 20 Mar 2020 21:19:01 +0100

bluez (5.50-1.1) unstable; urgency=high

  * Non-maintainer upload.
  * Address INTEL-SA-00352 (CVE-2020-0556) (Closes: #953770)
    - HOGP must only accept data from bonded devices
    - HID accepts bonded device connections only

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 13 Mar 2020 21:31:22 +0100

bluez (5.50-1) unstable; urgency=medium

  * Update to 5.50.
  * Fixed the version to be deleted of the conf file. (Closes: #877482)
  * Add more details to change the default "Name" of device in main.conf
    (Closes: #904212)
    Add patches/main.conf-Add-more-details-Closes-904212.patch

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sun, 29 Jul 2018 11:46:24 +0900

bluez (5.49-4) unstable; urgency=medium

  * Change team mail address.

 -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Wed, 23 May 2018 12:36:15 +0900

bluez (5.49-3) unstable; urgency=medium
