@@ -1,3 +1,3 @@
-usr/lib/bluetooth/obexd
+usr/libexec/bluetooth/obexd
 usr/share/dbus-1/services/org.bluez.obex.service
 usr/lib/systemd/user/obex.service
