@@ -4,7 +4,7 @@
 # compatibility note: if this variable is _not_ found bluetooth will start
 BLUETOOTH_ENABLED=1
 
-# This setting used to switch HID devices (e.g mouse/keyboad) to HCI mode, that
+# This setting used to switch HID devices (e.g mouse/keyboard) to HCI mode, that
 # is you will have bluetooth functionality from your dongle instead of only
 # HID. This is accomplished for supported devices by udev in
 # /lib/udev/rules.d/62-bluez-hid2hci.rules by invoking hid2hci with correct
