@@ -1,1 +1,1 @@
-usr/lib/bluetooth/bluetoothd usr/sbin/bluetoothd
+usr/libexec/bluetooth/bluetoothd usr/sbin/bluetoothd
