@@ -3,6 +3,15 @@ bluez (5.54-1) unstable; urgency=medium
   * Update to 5.54. (Closes: #946711, #966564, #925369)
   * Update d/libbluetooth3.symbols.
   * Delete unnecessary patches.
+  * Add zsh completion file to bluez. (Closes: #954281)
+    Thanks to Laurent Bigonville <bigon@debian.org>.
+  * Omit bluez-cups on Ubuntu/i386. (Closes: #947084)
+    Thanks to Steve Langasek <steve.langasek@canonical.com>.
+  * Fix typo in d/bluez.bluetooth.default. (Closes: #959483)
+    Thanks to Vincent Lefevre <vincent@vinc17.net>.
+  * Move daemon to /usr/libexec/bluetooth instead of /usr/lib/bluetooth.
+    (Closes: #954282)
+    Thanks to Laurent Bigonville <bigon@debian.org>.
 
  -- Nobuhiro Iwamatsu <iwamatsu@debian.org>  Sun, 30 Aug 2020 06:48:15 +0900
 
